# petproject-blog

./: pyproject.toml
blog_project/: db.sqlite3
blog_project/blog/: models.py  urls.py  views.py
blog_project/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py
blog_project/blog/static/css/: blog.css
blog_project/blog/templates/blog/: base.html
blog_project/blog/templates/blog/post/: list.html
blog_project/blog_project/: settings.py  urls.py
